--- a/linux/make/Makefile
+++ b/linux/make/Makefile
@@ -20,46 +20,46 @@ clean:
 
 ###################### Step 1
 
-# all:
-#
-# clean:
-#
-# .PHONY: all clean
+all:
+
+clean:
+
+.PHONY: all clean
 
 
 ###################### Step 2
-# all:
-# 	mkdir -p dist
-# 	cp app.js dist/app.js
-#
-# clean:
-# 	rm -rf dist
-#
-# .PHONY: all clean
+all:
+	mkdir -p dist
+	cp app.js dist/app.js
+
+clean:
+	rm -rf dist
+
+.PHONY: all clean
 
 ###################### Step 3
-# all:
-# 	@ mkdir -p dist
-# 	@ cp app.js dist/app.js
-#
-# clean:
-# 	@ rm -rf dist
-#
-# .PHONY: all clean
+all:
+	@ mkdir -p dist
+	@ cp app.js dist/app.js
+
+clean:
+	@ rm -rf dist
+
+.PHONY: all clean
 
 ###################### Step 4
-# all: dist app.js
-#
-# dist:
-# 	@ mkdir -p dist
-#
-# app.js:
-# 	@ cp src/app.js dist/app.js
-#
-# clean:
-# 	@ rm -rf dist
-#
-# .PHONY: all clean
+all: dist app.js
+
+dist:
+	@ mkdir -p dist
+
+app.js:
+	@ cp src/app.js dist/app.js
+
+clean:
+	@ rm -rf dist
+
+.PHONY: all clean
 
 
 ###################### Step 4.5
@@ -78,42 +78,42 @@ clean:
 
 
 ###################### Step 5
-# JS_FILES=src/app.js
-# DIST=dist
-# TODAY=$(shell date +%Y-%B-%d)
-# TIMESTAMP="//Created at $(TODAY) \n\n"
-#
-# all: dist app.js
-#
-# dist:
-# 	@ mkdir -p $@
-#
-# app.js:
-#   @ echo $(TIMESTAMP) > $(DIST)/$@
-#   @ cat $(JS_FILES) >> $(DIST)/$@
-#
-# clean:
-# 	@ rm -rf $(DIST)
-#
-# .PHONY: all clean
+JS_FILES=src/app.js
+DIST=dist
+TODAY=$(shell date +%Y-%B-%d)
+TIMESTAMP="//Created at $(TODAY) \n\n"
+
+all: dist app.js
+
+dist:
+	@ mkdir -p $@
+
+app.js:
+  @ echo $(TIMESTAMP) > $(DIST)/$@
+  @ cat $(JS_FILES) >> $(DIST)/$@
+
+clean:
+	@ rm -rf $(DIST)
+
+.PHONY: all clean
 
 ###################### Final
-# JS_FILES=src/app.js
-# DIST=dist
-# TODAY=$(shell date +%Y-%B-%d)
-# TIMESTAMP="//Created at $(TODAY) \n\n"
-#
-# all: $(DIST) app.js
-#
-# $(DIST):
-# 	@ mkdir -p $@
-#
-# app.js:
-# 	@ echo $(TIMESTAMP) > $(DIST)/$@
-# 	@ cat $(JS_FILES) >> $(DIST)/$@
-#
-#
-# clean:
-# 	@ rm -rf $(DIST)
-#
-# .PHONY: all clean
+JS_FILES=src/app.js
+DIST=dist
+TODAY=$(shell date +%Y-%B-%d)
+TIMESTAMP="//Created at $(TODAY) \n\n"
+
+all: $(DIST) app.js
+
+$(DIST):
+	@ mkdir -p $@
+
+app.js:
+	@ echo $(TIMESTAMP) > $(DIST)/$@
+	@ cat $(JS_FILES) >> $(DIST)/$@
+
+
+clean:
+	@ rm -rf $(DIST)
+
+.PHONY: all clean
